--- a/app/src/main/res/layout/screen_login.xml
+++ b/app/src/main/res/layout/screen_login.xml
@@ -15,6 +15,17 @@
         android:rotationX="180"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent" />
+    
+    <TextView
+        android:id="@+id/label_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Аутентификация"
+        android:textSize="30sp"
+
+        app:layout_constraintTop_toBottomOf="@id/background_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/login_input"
@@ -22,12 +33,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
-        android:hint="@string/name"
+        android:hint="Имя"
         app:hintTextAppearance="@style/HintAppearance"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/background_image">
+        app:layout_constraintTop_toBottomOf="@id/label_login">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login"
@@ -43,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
-        android:hint="@string/password"
+        android:hint="Пароль"
 
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/primary"
@@ -64,7 +75,7 @@
         android:id="@+id/registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/registration"
+        android:text="В первый раз?"
         android:layout_marginStart="35dp"
         android:textColor="@color/primary"
         android:textSize="16sp"
