--- a/app/src/main/res/layout/screen_player.xml
+++ b/app/src/main/res/layout/screen_player.xml
@@ -48,6 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="30dp"
+        android:backgroundTint="@color/white"
+        android:progressBackgroundTint="@color/white"
+        android:thumbTint="@color/white"
         android:padding="0dp"
 
         app:layout_constraintTop_toBottomOf="@id/book_title"
@@ -78,27 +81,16 @@
         app:layout_constraintTop_toBottomOf="@id/progress"/>
 
     <ImageView
-        android:id="@+id/btn_to_previous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-
-        app:srcCompat="@drawable/icon_rewind"
-        app:layout_constraintEnd_toStartOf="@id/btn_to_reload"
-        app:layout_constraintTop_toTopOf="@id/btn_pause"
-        app:layout_constraintBottom_toBottomOf="@id/btn_pause"/>
-
-    <ImageView
         android:id="@+id/btn_to_reload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:rotation="45"
+        android:layout_marginStart="20dp"
 
-        app:srcCompat="@drawable/icon_forward"
+        app:layout_constraintBottom_toBottomOf="@id/btn_pause"
         app:layout_constraintEnd_toStartOf="@id/btn_pause"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/btn_pause"
-        app:layout_constraintBottom_toBottomOf="@id/btn_pause" />
+        app:srcCompat="@drawable/icon_replay" />
 
     <CheckBox
         android:id="@+id/btn_pause"
@@ -112,27 +104,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/start" />
 
-    <ImageView
-        android:id="@+id/btn_to_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:rotation="180"
-
-        app:layout_constraintStart_toEndOf="@id/btn_to_upload"
-        app:layout_constraintTop_toTopOf="@id/btn_pause"
-        app:layout_constraintBottom_toBottomOf="@id/btn_pause"
-        app:srcCompat="@drawable/icon_rewind" />
 
     <ImageView
         android:id="@+id/btn_to_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
 
-        app:srcCompat="@drawable/icon_forward"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/btn_pause"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btn_pause"
         app:layout_constraintTop_toTopOf="@id/btn_pause"
-        app:layout_constraintBottom_toBottomOf="@id/btn_pause" />
+        app:srcCompat="@drawable/icon_forward" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
