--- a/app/src/main/res/layout/screen_welcome.xml
+++ b/app/src/main/res/layout/screen_welcome.xml
@@ -19,7 +19,8 @@
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AppName"
+        android:text="BookWorm"
+        android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@id/background_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -32,7 +33,7 @@
         android:layout_marginTop="80dp"
         android:padding="90dp"
         android:textSize="20sp"
-        android:text="begin"
+        android:text="Начать"
 
         app:cornerRadius="90dp"
         app:layout_constraintEnd_toEndOf="parent"
